--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "date-fns": "^2.30.0",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
+    "react-date-picker": "^10.5.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-geocode": "^0.2.3",
     "react-google-autocomplete": "^2.7.3",
